谱图接收线程修改，自动上传任务 bug 修复